Introduction to hierarchical clustering

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -26,8 +26,10 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.cluster import hierarchy\n",
     "from scipy.spatial.distance import pdist, squareform"
    ]
   },
@@ -417,6 +419,64 @@
     "\n",
     "display(distance_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0410a6-1809-40c3-9b78-971e2420fa03",
+   "metadata": {},
+   "source": [
+    "## Le regroupement hiérarchique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0faabf20-b2fd-4195-8b0d-deb040eaee15",
+   "metadata": {},
+   "source": [
+    "Jusqu’ici, les techniques de partitionnement proposées étaient plutôt simples et élémentaires : elles permettaient de dégager des appariements, tout au plus des regroupements de trois éléments. L’objectif à présent est de présenter une méthode plus systématique qui va, à chaque étape, effectuer des regroupements deux à deux jusqu’à ce qu’il ne reste plus qu’un seul groupe constitué de l’ensemble des autres.\n",
+    "\n",
+    "On peut matérialiser cette méthode grâce à un dendogramme :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c3af5df-925b-4e32-974b-f86476a64517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# by default, euclidean distance\n",
+    "Z = hierarchy.linkage(df, method='single')\n",
+    "\n",
+    "# plot dendrogram\n",
+    "plt.figure(figsize=(15, 7))\n",
+    "plt.title('Dendrogram')\n",
+    "plt.xlabel('Samples')\n",
+    "plt.ylabel('Distance')\n",
+    "_ = hierarchy.dendrogram(\n",
+    "    Z, \n",
+    "    labels=df.index, \n",
+    "    leaf_rotation=90,\n",
+    "    leaf_font_size=10,\n",
+    "    color_threshold=0.7 * max(Z[:, 2])\n",
+    ")\n",
+    "plt.axhline(y=0.7 * max(Z[:, 2]), color='r', linestyle='--')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "588c0187-9bc2-4325-8cb2-2ef40d4026cb",
+   "metadata": {},
+   "source": [
+    "### Le clustering par liaison simple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b44ff7-cb60-4194-b2e4-580e26c493e7",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
