Single-linkage clustering

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -68,7 +68,10 @@
     "n_questions = 10\n",
     "\n",
     "data = [\n",
-    "    [random.choice(['A', 'B', 'C', 'D']) for _ in range(n_questions)]\n",
+    "    [\n",
+    "        random.choice(['A', 'B', 'C', 'D'])\n",
+    "        for _ in range(n_questions)\n",
+    "    ]\n",
     "    for _ in range(n_students)\n",
     "]\n",
     "\n",
@@ -454,13 +457,12 @@
     "plt.xlabel('Samples')\n",
     "plt.ylabel('Distance')\n",
     "_ = hierarchy.dendrogram(\n",
-    "    Z, \n",
-    "    labels=df.index, \n",
+    "    Z,\n",
+    "    labels=df.index,\n",
     "    leaf_rotation=90,\n",
     "    leaf_font_size=10,\n",
     "    color_threshold=0.7 * max(Z[:, 2])\n",
     ")\n",
-    "plt.axhline(y=0.7 * max(Z[:, 2]), color='r', linestyle='--')\n",
     "plt.show()"
    ]
   },
@@ -476,7 +478,201 @@
    "cell_type": "markdown",
    "id": "46b44ff7-cb60-4194-b2e4-580e26c493e7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Une technique assez intuitive de regroupement repose sur l’idée que clusters sont reliés si deux de leurs composants sont plus proches l’un de l’autre que de n’importe quel autre composant d’un autre cluster. Pour illustrer cela, prenons quatre clusters *A*, *B*, *C* et *D* :\n",
+    "\n",
+    "|       | A      | B      | C   | D |\n",
+    "|-------|--------|--------|----|----|\n",
+    "| **A** | 0      | **12** | 23 | 34 |\n",
+    "| **B** | **12** | 0      | 19 | 28 |\n",
+    "| **C** | 23     | 19     | 0  | 15 |\n",
+    "| **D** | 34     | 28     | 15 | 0  |\n",
+    "\n",
+    "Ici, les clusters *A* et *B* sont plus proches l’un de l’autre que de n’importe quel autre, aussi pouvons-nous les regrouper en un même cluster. L’étape suivante va demander de réactualiser le tableau des distances où l’on remarque que *C* et *D* sont désormais les plus proches :\n",
+    "\n",
+    "|            | (A,B) | C      | D      |\n",
+    "|------------|-------|--------|--------|\n",
+    "| **(A,B)**  | 0     | 19     | 28     |\n",
+    "| **C**      | 19    | 0      | **15** |\n",
+    "| **D**      | 28    | **15** | 0      |\n",
+    "\n",
+    "Après actualisation du tableau, nous obtenons :\n",
+    "\n",
+    "|           | (A,B) | (C,D) |\n",
+    "|-----------|-------|-------|\n",
+    "| **(A,B)** | 0     | 19    |\n",
+    "| **(C,D)** | 19    | 0     |\n",
+    "\n",
+    "À la fin, le cluster unique que nous avons formé est : $((A,B), (C,D))$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc4077f-3b8f-489e-b138-d3b956ab4d75",
+   "metadata": {},
+   "source": [
+    "#### Décomposition étape par étape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0676bd06-4bdf-41aa-8028-d1dc46ec66b6",
+   "metadata": {},
+   "source": [
+    "L’approche du clustering par liaison simple (ou *single-linkage clustering* en anglais) est dite agglomérative (ou *bottom-up*) dans le sens où elle forme des clusters élément par élément.\n",
+    "\n",
+    "À chaque étape, il est déjà possible de calculer le point de jonction entre les clusters, logiquement situé à équidistance entre leurs composants les plus proches. Par exemple, à la première étape, les clusters *A* et *B* sont à une distance de 12 l’un de l’autre. Si nous traçons une droite entre les deux et que nous devions en trouver le milieu, nous diviserions 12 par deux pour en déduire que le point de jonction entre les deux clusters se trouve à 6. À la seconde étape, le point de jonction entre les clusters *C* et *D* est situé à $15 \\div 2 = 7.5$.\n",
+    "\n",
+    "**Remarque :** on appellera plutôt ce point de jonction un nœud.\n",
+    "\n",
+    "Ensuite, la partie cruciale consiste à réactualiser la matrice des distances selon la fonction de liaison exprimée par la formule :\n",
+    "\n",
+    "$$\n",
+    "D(X, Y) = \\min_{x \\in X, y \\in Y} d(x, y)\n",
+    "$$\n",
+    "\n",
+    "Où :\n",
+    "\n",
+    "- *X* et *Y* sont des clusters ;\n",
+    "- *x* et *y* des composants de ces clusters.\n",
+    "\n",
+    "En reprenant notre exemple, et après avoir identifié que *A* et *B* étaient les clusters les plus proches et les avoir regroupés, nous devons déterminer lequel des deux était le plus proche de *C* et de *D* :\n",
+    "\n",
+    "- la distance *AC* est de 23, quand *BC* est de 19, aussi le cluster $(A,B)$ se situe-t-il à une distance de 19 de *C* ;\n",
+    "- $D((A,B),D) = \\min{(D(A,D), D(B,D))} = \\min{(34,28)} = 28$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db86cb9e-63f1-4ab3-92e6-b89b125e219f",
+   "metadata": {},
+   "source": [
+    "#### Algorithme de résolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b3a29f-81b0-4d4a-9466-9d9fe2c91562",
+   "metadata": {},
+   "source": [
+    "Si l’on devait concevoir à la main un programme qui effectue un clustering par liaison simple, nous répertorerions les actions suivantes à mener :\n",
+    "\n",
+    "- calculer la distance entre les clusters ;\n",
+    "- trouver les points les plus proches entre tous les clusters ;\n",
+    "- déterminer entre tous les clusters qui sont les plus proches.\n",
+    "\n",
+    "Définissons les fonctions nécessaires :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f7b72c2-1096-472e-97fc-4760c900cbf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def single_linkage(k:list, l:list, m) -> float:\n",
+    "    \"\"\"Calculate the minimum distance between clusters,\n",
+    "    according to the single-linkage method:\n",
+    "    d(k, l) = min d(u, v)\n",
+    "\n",
+    "    Args:\n",
+    "        k -- a cluster (collection of points)\n",
+    "        l -- another cluster\n",
+    "        m -- matrix\n",
+    "\n",
+    "    Usage example:\n",
+    "        min_distance = single_linkage([0,3], [6,2,9], m)\n",
+    "    \"\"\"\n",
+    "    return min(np.linalg.norm(m[p_k] - m[p_l]) for p_k in k for p_l in l)\n",
+    "\n",
+    "def points_in_cluster(cluster):\n",
+    "    \"\"\"A cluster is a collection of points.\"\"\"\n",
+    "    return [int(point) for point in cluster.split(',')]\n",
+    "\n",
+    "def dist_between_clusters(n, clusters, m):\n",
+    "    return [\n",
+    "        single_linkage(points_in_cluster(n), points_in_cluster(cluster), m)\n",
+    "        for cluster in clusters.loc[n].index\n",
+    "    ]\n",
+    "\n",
+    "def nearest_clusters(m):\n",
+    "    \"\"\"Find the nearest clusters in a distance matrix.\"\"\"\n",
+    "\n",
+    "    # looking for the minimal distance\n",
+    "    min_dist = m[m > 0].min().min()\n",
+    "\n",
+    "    # which clusters are concerned?\n",
+    "    c_1, c_2 = np.where(m == min_dist)[0]\n",
+    "\n",
+    "    # and their names?\n",
+    "    c_1_name = m.iloc[c_1].name\n",
+    "    c_2_name = m.iloc[c_2].name\n",
+    "\n",
+    "    return (c_1_name, c_2_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f87ebf69-dd5c-45c0-8127-0846041c980b",
+   "metadata": {},
+   "source": [
+    "**1e étape :** calculer une matrice des distances où au départ chaque point est un cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdf32910-5626-488f-8235-f96ac1528740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a copy of the distance matrix\n",
+    "cluster_df = pd.DataFrame(distance_df.values, index=[str(i) for i in range(len(distance_df))], columns=[str(i) for i in range(len(distance_df))])\n",
+    "\n",
+    "# how many clusters at the end?\n",
+    "n = 2\n",
+    "\n",
+    "# how many steps in total?\n",
+    "n_steps = len(cluster_df) - n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "347a504c-beff-460e-b517-4a7da878204d",
+   "metadata": {},
+   "source": [
+    "**2e étape :** trouver les clusters les plus proches et les regrouper (à répéter autant de fois que nécessaire)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3822e37e-cc4e-48df-bdc4-58ecab085547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(n_steps):\n",
+    "\n",
+    "    # find the nearest clusters\n",
+    "    c_1, c_2 = nearest_clusters(cluster_df)\n",
+    "    new_cluster = ','.join([c_1, c_2])\n",
+    "\n",
+    "    # new cluster in town\n",
+    "    cluster_df.loc[new_cluster] = np.zeros(len(cluster_df))\n",
+    "    cluster_df[new_cluster] = np.zeros(len(cluster_df))\n",
+    "\n",
+    "    # update distance matrix\n",
+    "    cluster_df.loc[new_cluster] = dist_between_clusters(new_cluster, cluster_df, distance_df.values)\n",
+    "    cluster_df[new_cluster] = dist_between_clusters(new_cluster, cluster_df, distance_df.values)\n",
+    "\n",
+    "    # delete merged clusters\n",
+    "    cluster_df.drop([c_1, c_2], axis=0, inplace=True)\n",
+    "    cluster_df.drop([c_1, c_2], axis=1, inplace=True)\n",
+    "\n",
+    "    # result\n",
+    "    print(f\"Step {i + 1}: {','.join(str(int(x) + 1) for x in new_cluster.split(','))}\")"
+   ]
   }
  ],
  "metadata": {
@@ -495,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
