--- a/4.data-analysis/3.statistical-measurements.ipynb
+++ b/4.data-analysis/3.statistical-measurements.ipynb
@@ -398,7 +398,7 @@
     "count = sum(map(lambda x: x <= alpha, ages))\n",
     "p = count / len(ages)\n",
     "\n",
-    "print(f\"{p:.2%} des individus interrogés ont en dessous de 40 ans.\")"
+    "print(f\"{p:.2%} des individus interrogés ont en dessous de {alpha} ans.\")"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
