Complete-linkage clustering

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -483,27 +483,27 @@
     "\n",
     "|       | A      | B      | C   | D |\n",
     "|-------|--------|--------|----|----|\n",
-    "| **A** | 0      | **12** | 23 | 34 |\n",
+    "| **A** | 0      | **12** | 13 | 34 |\n",
     "| **B** | **12** | 0      | 19 | 28 |\n",
-    "| **C** | 23     | 19     | 0  | 15 |\n",
+    "| **C** | 13     | 19     | 0  | 15 |\n",
     "| **D** | 34     | 28     | 15 | 0  |\n",
     "\n",
-    "Ici, les clusters *A* et *B* sont plus proches l’un de l’autre que de n’importe quel autre, aussi pouvons-nous les regrouper en un même cluster. L’étape suivante va demander de réactualiser le tableau des distances où l’on remarque que *C* et *D* sont désormais les plus proches :\n",
+    "Ici, les clusters *A* et *B* sont plus proches l’un de l’autre que de n’importe quel autre cluster, aussi pouvons-nous les regrouper. L’étape suivante va demander de réactualiser le tableau des distances où l’on remarque que les clusters $(A,B)$ et *C* sont désormais les plus proches :\n",
     "\n",
-    "|            | (A,B) | C      | D      |\n",
-    "|------------|-------|--------|--------|\n",
-    "| **(A,B)**  | 0     | 19     | 28     |\n",
-    "| **C**      | 19    | 0      | **15** |\n",
-    "| **D**      | 28    | **15** | 0      |\n",
+    "|            | (A,B)  | C      | D  |\n",
+    "|------------|--------|--------|----|\n",
+    "| **(A,B)**  | 0      | **13** | 28 |\n",
+    "| **C**      | **13** | 0      | 15 |\n",
+    "| **D**      | 28     | 15     | 0  |\n",
     "\n",
     "Après actualisation du tableau, nous obtenons :\n",
     "\n",
-    "|           | (A,B) | (C,D) |\n",
-    "|-----------|-------|-------|\n",
-    "| **(A,B)** | 0     | 19    |\n",
-    "| **(C,D)** | 19    | 0     |\n",
+    "|               | ((A,B),C) | D  |\n",
+    "|---------------|-----------|----|\n",
+    "| **((A,B),C)** | 0         | 15 |\n",
+    "| **D**         | 15        | 0  |\n",
     "\n",
-    "À la fin, le cluster unique que nous avons formé est : $((A,B), (C,D))$."
+    "À la fin, le cluster unique que nous avons formé est : $(((A,B),C), D)$."
    ]
   },
   {
@@ -521,7 +521,7 @@
    "source": [
     "L’approche du clustering par liaison simple (ou *single-linkage clustering* en anglais) est dite agglomérative (ou *bottom-up*) dans le sens où elle forme des clusters élément par élément.\n",
     "\n",
-    "À chaque étape, il est déjà possible de calculer le point de jonction entre les clusters, logiquement situé à équidistance entre leurs composants les plus proches. Par exemple, à la première étape, les clusters *A* et *B* sont à une distance de 12 l’un de l’autre. Si nous traçons une droite entre les deux et que nous devions en trouver le milieu, nous diviserions 12 par deux pour en déduire que le point de jonction entre les deux clusters se trouve à 6. À la seconde étape, le point de jonction entre les clusters *C* et *D* est situé à $15 \\div 2 = 7.5$.\n",
+    "À chaque étape, il est déjà possible de calculer le point de jonction entre les clusters, logiquement situé à équidistance entre leurs composants les plus proches. Par exemple, à la première étape, les clusters *A* et *B* sont à une distance de 12 l’un de l’autre. Si nous traçons une droite entre les deux et que nous devions en trouver le milieu, nous diviserions 12 par deux pour en déduire que le point de jonction entre les deux clusters se trouve à 6. À la seconde étape, le point de jonction entre les clusters *(A,B)* et *C* est situé à $13 \\div 2 = 6.5$.\n",
     "\n",
     "**Remarque :** on appellera plutôt ce point de jonction un nœud.\n",
     "\n",
@@ -538,7 +538,7 @@
     "\n",
     "En reprenant notre exemple, et après avoir identifié que *A* et *B* étaient les clusters les plus proches et les avoir regroupés, nous devons déterminer lequel des deux était le plus proche de *C* et de *D* :\n",
     "\n",
-    "- la distance *AC* est de 23, quand *BC* est de 19, aussi le cluster $(A,B)$ se situe-t-il à une distance de 19 de *C* ;\n",
+    "- la distance *AC* est de 13, quand *BC* est de 19, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 13 de *C* ;\n",
     "- $D((A,B),D) = \\min{(D(A,D), D(B,D))} = \\min{(34,28)} = 28$"
    ]
   },
@@ -592,7 +592,7 @@
     "\n",
     "def dist_between_clusters(n, clusters, m):\n",
     "    return [\n",
-    "        single_linkage(points_in_cluster(n), points_in_cluster(cluster), m)\n",
+    "        0 if n == cluster else single_linkage(points_in_cluster(n), points_in_cluster(cluster), m)\n",
     "        for cluster in clusters.loc[n].index\n",
     "    ]\n",
     "\n",
@@ -649,6 +649,190 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3822e37e-cc4e-48df-bdc4-58ecab085547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(n_steps):\n",
+    "\n",
+    "    # find the nearest clusters\n",
+    "    c_1, c_2 = nearest_clusters(cluster_df)\n",
+    "    new_cluster = ','.join([c_1, c_2])\n",
+    "\n",
+    "    # new cluster in town\n",
+    "    cluster_df.loc[new_cluster] = np.zeros(len(cluster_df))\n",
+    "    cluster_df[new_cluster] = np.zeros(len(cluster_df))\n",
+    "\n",
+    "    # update distance matrix\n",
+    "    cluster_df.loc[new_cluster] = dist_between_clusters(new_cluster, cluster_df, distance_df.values)\n",
+    "    cluster_df[new_cluster] = dist_between_clusters(new_cluster, cluster_df, distance_df.values)\n",
+    "\n",
+    "    # delete merged clusters\n",
+    "    cluster_df.drop([c_1, c_2], axis=0, inplace=True)\n",
+    "    cluster_df.drop([c_1, c_2], axis=1, inplace=True)\n",
+    "\n",
+    "    # result\n",
+    "    print(f\"Step {i + 1}: {','.join(str(int(x) + 1) for x in new_cluster.split(','))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95d1ae57-43b0-466a-b116-426902e8b2b2",
+   "metadata": {},
+   "source": [
+    "### Le clustering par liaison complète"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98805c04-38a2-460c-96f7-e77154fa2775",
+   "metadata": {},
+   "source": [
+    "Autre technique de partitionnement hiérarchique, le clustering par liaison complète (ou *complete-linkage clustering* en anglais) ne va pas considérer, contrairement au clustering par liaison simple, que la distance des points les plus proches de deux clusters définisse la distance entre les clusters, mais que ce soit plutôt la distance des points les plus éloignés.\n",
+    "\n",
+    "La fonction de laison s’exprime désormais par l’expression mathématique :\n",
+    "\n",
+    "$$\n",
+    "D(X, Y) = \\max_{x \\in X, y \\in Y} d(x, y)\n",
+    "$$\n",
+    "\n",
+    "En reprenant l’exemple plus haut, à la 1e étape les clusters *A* et *B* sont toujours les plus proches :\n",
+    "\n",
+    "|       | A      | B      | C   | D |\n",
+    "|-------|--------|--------|----|----|\n",
+    "| **A** | 0      | **12** | 13 | 34 |\n",
+    "| **B** | **12** | 0      | 19 | 28 |\n",
+    "| **C** | 13     | 19     | 0  | 15 |\n",
+    "| **D** | 34     | 28     | 15 | 0  |\n",
+    "\n",
+    "Après réactualisation du tableau des distances avec la fonction de laison complète, nous obtenons :\n",
+    "\n",
+    "|            | (A,B) | C      | D      |\n",
+    "|------------|-------|--------|--------|\n",
+    "| **(A,B)**  | 0     | 19     | 34     |\n",
+    "| **C**      | 19    | 0      | **15** |\n",
+    "| **D**      | 34    | **15** | 0      |\n",
+    "\n",
+    "Avec cette technique, le cluster $(A,B)$ s’est éloigné de *C* et de *D*, si bien que ces deux derniers sont désormais les plus proches l’un de l’autre :\n",
+    "\n",
+    "|               | (A,B) | (C,D) |\n",
+    "|---------------|-------|-------|\n",
+    "| **(A,B)**     | 0     | 34    |\n",
+    "| **(C,D)**     | 34    | 0     |\n",
+    "\n",
+    "À la fin, le cluster unique que nous avons formé est : $((A,B), (C,D))$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f46b2d-8469-4370-9a9d-9a2274584fed",
+   "metadata": {},
+   "source": [
+    "#### Décomposition par étapes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271b456f-e11e-40d6-b1a0-a14013310b0d",
+   "metadata": {},
+   "source": [
+    "À chaque étape, il convient de regrouper d’abord deux clusters en fonction de leur proximité puis de recalculer la distance qui les sépare des autres en prenant le point le plus éloigné.\n",
+    "\n",
+    "Ainsi, après avoir identifié dans notre exemple que *A* et *B* étaient les clusters les plus proches et les avoir regroupés, nous devons déterminer lequel des deux était le plus **éloigné** de *C* et de *D* :\n",
+    "\n",
+    "- la distance *AC* est de 13, quand *BC* est de 19, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 19 de *C* ;\n",
+    "- $D((A,B),D) = \\max{(D(A,D), D(B,D))} = \\max{(34,28)} = 34$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b800e41-480b-40ed-8399-b830d8a9516a",
+   "metadata": {},
+   "source": [
+    "#### Algorithme de résolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "579b2c99-354f-479b-8f34-3e6e792c6993",
+   "metadata": {},
+   "source": [
+    "L’algorithme est pour ainsi dire identique à celui du clustering par liaison simple. Nous avons juste besoin d’une fonction spécifique :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad602b40-6c7f-45cf-bbb8-241d9bc6ed99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def complete_linkage(k:list, l:list, m) -> float:\n",
+    "    \"\"\"Calculate the maximum distance between clusters,\n",
+    "    according to the complete-linkage method:\n",
+    "    d(k, l) = max d(u, v)\n",
+    "\n",
+    "    Args:\n",
+    "        k -- a cluster (collection of points)\n",
+    "        l -- another cluster\n",
+    "        m -- matrix\n",
+    "\n",
+    "    Usage example:\n",
+    "        max_distance = complete_linkage([0,3], [6,2,9], m)\n",
+    "    \"\"\"\n",
+    "    return max(np.linalg.norm(m[p_k] - m[p_l]) for p_k in k for p_l in l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b7bd8f7-172e-42aa-b816-2cb5ac4740fa",
+   "metadata": {},
+   "source": [
+    "Et de redéfinir `dist_between_clusters()` en faisant appel à la fonction `complete_linkage()` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ce1cef-5b2d-48b3-913f-4ecac39c0a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_between_clusters(n, clusters, m):\n",
+    "    return [\n",
+    "        0 if n == cluster else complete_linkage(points_in_cluster(n), points_in_cluster(cluster), m)\n",
+    "        for cluster in clusters.loc[n].index\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3419a707-6dd4-4c96-98c8-c661853cda16",
+   "metadata": {},
+   "source": [
+    "Pour le reste, la procédure est similaire :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3910e323-bcb2-42a6-ba8c-e5ee9c9ced41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a copy of the distance matrix\n",
+    "cluster_df = pd.DataFrame(distance_df.values, index=[str(i) for i in range(len(distance_df))], columns=[str(i) for i in range(len(distance_df))])\n",
+    "\n",
+    "# how many clusters at the end?\n",
+    "n = 3\n",
+    "\n",
+    "# how many steps in total?\n",
+    "n_steps = len(cluster_df) - n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc976e13-f732-428f-baf0-03855edefbbc",
    "metadata": {},
    "outputs": [],
    "source": [
