--- a/4.data-analysis/answers/3.1.descriptive-statistics.ipynb
+++ b/4.data-analysis/answers/3.1.descriptive-statistics.ipynb
@@ -137,7 +137,7 @@
    "id": "e5ab7f87-97e8-4142-bbfc-73a2ca69e521",
    "metadata": {},
    "source": [
-    "1. Quelle est la variance et l’écart-type de l’âge des personnes interpellées ?\n",
+    "1. Quels sont la variance et l’écart-type de l’âge des personnes interpellées ?\n",
     "2. Quelle est l’étendue (valeurs minimale et maximale) du nombre de fois où les personnes apparaissent dans les bases de données de la police ?\n",
     "3. Quel est l’écart interquartile (IQR) de l’âge des personnes interpellées ?\n",
     "4. Quelle est la distribution (écart-type et coefficient de variation) du nombre de fois où les individus sans emploi sont arrêtés par rapport à ceux qui ont un emploi ?"
