Centroid-linkage clusternig

--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -428,7 +428,7 @@
    "id": "4c0410a6-1809-40c3-9b78-971e2420fa03",
    "metadata": {},
    "source": [
-    "## Le regroupement hiérarchique"
+    "## Le regroupement hiérarchique ascendant"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "source": [
     "Jusqu’ici, les techniques de partitionnement proposées étaient plutôt simples et élémentaires : elles permettaient de dégager des appariements, tout au plus des regroupements de trois éléments. L’objectif à présent est de présenter une méthode plus systématique qui va, à chaque étape, effectuer des regroupements deux à deux jusqu’à ce qu’il ne reste plus qu’un seul groupe constitué de l’ensemble des autres.\n",
     "\n",
-    "On peut matérialiser cette méthode grâce à un dendogramme :"
+    "On peut matérialiser cette méthode de classification ascendante hiérarchique (HAC pour *Hierarchical Agglomerative Classification*) grâce à un dendogramme :"
    ]
   },
   {
@@ -484,8 +484,8 @@
     "|       | A      | B      | C   | D |\n",
     "|-------|--------|--------|----|----|\n",
     "| **A** | 0      | **12** | 13 | 34 |\n",
-    "| **B** | **12** | 0      | 19 | 28 |\n",
-    "| **C** | 13     | 19     | 0  | 15 |\n",
+    "| **B** | **12** | 0      | 16 | 28 |\n",
+    "| **C** | 13     | 16     | 0  | 15 |\n",
     "| **D** | 34     | 28     | 15 | 0  |\n",
     "\n",
     "Ici, les clusters *A* et *B* sont plus proches l’un de l’autre que de n’importe quel autre cluster, aussi pouvons-nous les regrouper. L’étape suivante va demander de réactualiser le tableau des distances où l’on remarque que les clusters $(A,B)$ et *C* sont désormais les plus proches :\n",
@@ -519,7 +519,7 @@
    "id": "0676bd06-4bdf-41aa-8028-d1dc46ec66b6",
    "metadata": {},
    "source": [
-    "L’approche du clustering par liaison simple (ou *single-linkage clustering* en anglais) est dite agglomérative (ou *bottom-up*) dans le sens où elle forme des clusters élément par élément.\n",
+    "L’approche du clustering par liaison simple (ou *single-linkage clustering* en anglais) est dite ascendante (ou *bottom-up*) dans le sens où elle forme des clusters élément par élément.\n",
     "\n",
     "À chaque étape, il est déjà possible de calculer le point de jonction entre les clusters, logiquement situé à équidistance entre leurs composants les plus proches. Par exemple, à la première étape, les clusters *A* et *B* sont à une distance de 12 l’un de l’autre. Si nous traçons une droite entre les deux et que nous devions en trouver le milieu, nous diviserions 12 par deux pour en déduire que le point de jonction entre les deux clusters se trouve à 6. À la seconde étape, le point de jonction entre les clusters *(A,B)* et *C* est situé à $13 \\div 2 = 6.5$.\n",
     "\n",
@@ -538,7 +538,7 @@
     "\n",
     "En reprenant notre exemple, et après avoir identifié que *A* et *B* étaient les clusters les plus proches et les avoir regroupés, nous devons déterminer lequel des deux était le plus proche de *C* et de *D* :\n",
     "\n",
-    "- la distance *AC* est de 13, quand *BC* est de 19, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 13 de *C* ;\n",
+    "- la distance *AC* est de 13, quand *BC* est de 16, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 13 de *C* ;\n",
     "- $D((A,B),D) = \\min{(D(A,D), D(B,D))} = \\min{(34,28)} = 28$"
    ]
   },
@@ -700,16 +700,16 @@
     "|       | A      | B      | C   | D |\n",
     "|-------|--------|--------|----|----|\n",
     "| **A** | 0      | **12** | 13 | 34 |\n",
-    "| **B** | **12** | 0      | 19 | 28 |\n",
-    "| **C** | 13     | 19     | 0  | 15 |\n",
+    "| **B** | **12** | 0      | 16 | 28 |\n",
+    "| **C** | 13     | 16     | 0  | 15 |\n",
     "| **D** | 34     | 28     | 15 | 0  |\n",
     "\n",
     "Après réactualisation du tableau des distances avec la fonction de laison complète, nous obtenons :\n",
     "\n",
     "|            | (A,B) | C      | D      |\n",
     "|------------|-------|--------|--------|\n",
-    "| **(A,B)**  | 0     | 19     | 34     |\n",
-    "| **C**      | 19    | 0      | **15** |\n",
+    "| **(A,B)**  | 0     | 16     | 34     |\n",
+    "| **C**      | 16    | 0      | **15** |\n",
     "| **D**      | 34    | **15** | 0      |\n",
     "\n",
     "Avec cette technique, le cluster $(A,B)$ s’est éloigné de *C* et de *D*, si bien que ces deux derniers sont désormais les plus proches l’un de l’autre :\n",
@@ -739,7 +739,7 @@
     "\n",
     "Ainsi, après avoir identifié dans notre exemple que *A* et *B* étaient les clusters les plus proches et les avoir regroupés, nous devons déterminer lequel des deux était le plus **éloigné** de *C* et de *D* :\n",
     "\n",
-    "- la distance *AC* est de 13, quand *BC* est de 19, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 19 de *C* ;\n",
+    "- la distance *AC* est de 13, quand *BC* est de 16, aussi considère-t-on que le cluster $(A,B)$ se situe à une distance de 16 de *C* ;\n",
     "- $D((A,B),D) = \\max{(D(A,D), D(B,D))} = \\max{(34,28)} = 34$"
    ]
   },
@@ -856,6 +856,122 @@
     "\n",
     "    # result\n",
     "    print(f\"Step {i + 1}: {','.join(str(int(x) + 1) for x in new_cluster.split(','))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c2b0ce-2975-4a1f-a0aa-01dd905f667f",
+   "metadata": {},
+   "source": [
+    "### Le clustering par liaison centroïde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aec5f934-4d15-4d85-a1f3-c640c27176b3",
+   "metadata": {},
+   "source": [
+    "Dans cette relation, la distance entre deux clusters est la norme au carré du vecteur différence de leurs centroïdes, un centroïde étant simplement la moyenne d’une coordonnée :\n",
+    "\n",
+    "$$\n",
+    "D(X, Y) = \\| \\mu_X - \\mu_Y \\|^2\n",
+    "$$\n",
+    "\n",
+    "Cette méthode est un peu plus délicate que les précédentes dans la mesure où elle considère la distance entre des centroïdes et pas seulement entre des points.\n",
+    "\n",
+    "**Remarque :** afin de marquer plus nettement la séparation entre les clusters, la formule de la distance euclidienne est élevée au carré.\n",
+    "\n",
+    "Considérons cinq points dans un espace en deux dimensions et leur matrice des distances, au carré cette fois-ci :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6757558d-81a5-4848-b38c-f094496335fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = np.random.rand(5, 2) * 10\n",
+    "distances = pdist(points) ** 2\n",
+    "distance_matrix = squareform(distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfb1f07d-aa2b-48e0-94ad-75728601332f",
+   "metadata": {},
+   "source": [
+    "Trouvons d’abord la plus petite distance et révélons l’indice des clusters concernés :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0150c51b-b279-4901-985b-621e5432f236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the minimal distance\n",
+    "min_dist = distance_matrix[distance_matrix > 0].min().min()\n",
+    "\n",
+    "# which clusters are concerned?\n",
+    "c_1, c_2 = np.where(distance_matrix == min_dist)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8db322bd-ac42-4923-b19e-5a1f0b092178",
+   "metadata": {},
+   "source": [
+    "Maintenant que les clusters `c_1` et `c_2` ont été identifiés comme les plus proches, il nous faut calculer leur centroïde :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46456b92-8547-4f6c-8234-bcd127c656b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centroid = (points[c_1] + points[c_2]) / 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b72b1ec-826e-45be-8bca-79f939fad661",
+   "metadata": {},
+   "source": [
+    "Ce centroïde devient un nouveau point dans l’espace en remplacement des points derrière `c_1` et `c_2` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd08e01-2be2-4220-903c-f63f2aef087b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = np.delete(points, [c_1, c_2], axis=0)\n",
+    "points = np.vstack([points, centroid])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b3d11e-9a34-439f-a8b8-699affb5c269",
+   "metadata": {},
+   "source": [
+    "Enfin, on recalcule la matrice des distances :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a719d1-6f5d-457d-a2e7-bd19728b725b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances = pdist(points) ** 2\n",
+    "distance_matrix = squareform(distances)"
    ]
   }
  ],
