--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ec46f4e-5f5a-4ba9-8d47-c36c90cab5ef",
    "metadata": {},
    "outputs": [],
@@ -479,6 +479,8 @@
    "id": "46b44ff7-cb60-4194-b2e4-580e26c493e7",
    "metadata": {},
    "source": [
+    "![Single-linkage clustering](./figs/single-linkage_clustering.svg)\n",
+    "\n",
     "Une technique assez intuitive de regroupement repose sur l’idée que clusters sont reliés si deux de leurs composants sont plus proches l’un de l’autre que de n’importe quel autre composant d’un autre cluster. Pour illustrer cela, prenons quatre clusters *A*, *B*, *C* et *D* :\n",
     "\n",
     "|       | A      | B      | C   | D |\n",
@@ -687,6 +689,8 @@
    "id": "98805c04-38a2-460c-96f7-e77154fa2775",
    "metadata": {},
    "source": [
+    "![Complete-linkage clustering](./figs/complete-linkage_clustering.svg)\n",
+    "\n",
     "Autre technique de partitionnement hiérarchique, le clustering par liaison complète (ou *complete-linkage clustering* en anglais) ne va pas considérer, contrairement au clustering par liaison simple, que la distance des points les plus proches de deux clusters définisse la distance entre les clusters, mais que ce soit plutôt la distance des points les plus éloignés.\n",
     "\n",
     "La fonction de laison s’exprime désormais par l’expression mathématique :\n",
