--- a/4.data-analysis/5.cluster-analysis.ipynb
+++ b/4.data-analysis/5.cluster-analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5ec46f4e-5f5a-4ba9-8d47-c36c90cab5ef",
    "metadata": {},
    "outputs": [],
@@ -875,6 +875,8 @@
    "id": "aec5f934-4d15-4d85-a1f3-c640c27176b3",
    "metadata": {},
    "source": [
+    "![Clustering par liaison centroïde](./figs/centroid-linkage_clustering.svg)\n",
+    "\n",
     "Dans cette relation, la distance entre deux clusters est la norme au carré du vecteur différence de leurs centroïdes, un centroïde étant simplement la moyenne d’une coordonnée :\n",
     "\n",
     "$$\n",
@@ -977,6 +979,63 @@
     "distances = pdist(points) ** 2\n",
     "distance_matrix = squareform(distances)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b65b15e-bc71-4288-a9ba-363ebda27c1a",
+   "metadata": {},
+   "source": [
+    "### Autres HAC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7abd140-02c2-4521-bfdf-536a85218ef4",
+   "metadata": {},
+   "source": [
+    "Parmi toutes les techniques de partitionnement hiérarchique ascendant, citons encore **le clustering par liens médians** qui calcule la distance médiane entre les points des clusters, ou encore **le clustering par liaisons moyennes**, qui établit la moyenne entre toutes les paires de distances dans les clusters :\n",
+    "\n",
+    "![Average-linkage clustering](./figs/average-linkage_clustering.svg)\n",
+    "\n",
+    "Et, pour la dernière, nous avons réservé **la méthode de Ward** qui minimise la somme des carrés des écarts au sein des clusters en fusionnant les paires de clusters qui entraînent la plus petite augmentation de la variance totale.\n",
+    "\n",
+    "Pour toutes, le module `scipy.cluster.hierarchy` se charge des calculs grâce à une méthode `.linkage()` qui accepte un argument `method` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a38643-1df6-42b2-9e49-6ffe377d0804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ward's linkage clustering\n",
+    "Z = hierarchy.linkage(df, method='ward')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b72102a8-0b9e-4ad6-838d-4c1372ea8c45",
+   "metadata": {},
+   "source": [
+    "Le module dispose également d’une méthode `.dendogram()` pour afficher le résultat du regroupement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5306bb9-f9ce-4f48-a1d6-7e1c0f828c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = hierarchy.dendrogram(\n",
+    "    Z,\n",
+    "    labels=df.index,\n",
+    "    leaf_rotation=90,\n",
+    "    leaf_font_size=10,\n",
+    "    color_threshold=0.7 * max(Z[:, 2])\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -995,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
